--- a/.github/workflows/run-monitor.yml
+++ b/.github/workflows/run-monitor.yml
@@ -1,4 +1,4 @@
-name: 1. Uso de Variáveis, Segredos e Contextos
+name: Uso de Variáveis, Segredos e Contextos
 
 on:
   workflow_dispatch:
@@ -6,10 +6,7 @@ on:
 jobs:
   use-env-context:
     name: Contexto ENV
-    runs-on: ubuntu-latest
-    env:
-      APP_ENV: dev
-      SUPPORT_EMAIL: suporte@appmonitor.io
+    runs-on: ubuntu-latest 
     steps:
       - name: Ambiente do job
         run: |
